overflow fixed on history window

--- a/src/index.scss
+++ b/src/index.scss
@@ -147,6 +147,8 @@ h2 {
 .history-window {
     width: 300px;
     height: 100%;
+
+    overflow: scroll;
 }
 
 .history-log-single {
